# internal/interface/http/server/errors.go
@@ -21,7 +21,10 @@ var errorMapping = []struct {
 	{elevator.ErrInvalidFloor, http.StatusBadRequest, oapi.OUTOFRANGE},
 	{elevator.ErrInvalidDestinationFloor, http.StatusBadRequest, oapi.OUTOFRANGE},
 	{elevator.ErrInvalidHallCallDirection, http.StatusBadRequest, oapi.INVALIDDIRECTION},
-	{elevator.ErrSameFloor, http.StatusBadRequest, oapi.SAMEFLOOR},
+	{elevator.ErrInvalidDirection, http.StatusBadRequest, oapi.INVALIDREQUEST},
+	{elevator.ErrInvalidDoorState, http.StatusBadRequest, oapi.INVALIDREQUEST},
+	{elevator.ErrInvalidOperationState, http.StatusBadRequest, oapi.INVALIDREQUEST},
+	{elevator.ErrElevatorAlreadyExists, http.StatusBadRequest, oapi.INVALIDREQUEST},
 	{elevator.ErrElevatorNotFound, http.StatusNotFound, oapi.ELEVATORNOTFOUND},
 	{elevator.ErrHallCallNotFound, http.StatusNotFound, oapi.CALLNOTFOUND},
 	{elevator.ErrElevatorNotRunning, http.StatusConflict, oapi.INVALIDSTATE},
